# Rusty

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  TODO.org
scenes/conference-new/: conference.mtl
scenes/cornell/: cornell_chesterfield.mtl
scenes/cornell-box/: CornellBox-Glossy.mtl  CornellBox-Sphere.mtl  CornellBox-Water.mtl
scenes/crytek-sponza/: sponza.mtl
scenes/indirect-test/: indirect-test_mat.mtl  indirect-test_tex.mtl
scenes/sibenik/: sibenik.mtl
src/: aabb.rs  benchmark.rs  bsdf.rs  bvh.rs  camera.rs  color.rs  config.rs  consts.rs  float.rs  fragment.glsl  gl_renderer.rs  image.vert  index_ptr.rs  input.rs  intersect.rs  light.rs  load.rs  main.rs  material.rs  mesh.rs  obj_load.rs  preview.vert  pt_renderer.rs  sample.rs  scattering.rs  scene.rs  statistics.rs  stats.rs  texture.rs  triangle.rs  util.rs  vertex.glsl  vertex.rs
src/bsdf/: fresnel.rs  lambertian.rs  microfacet.rs  specular.rs  util.rs
src/camera/: pt_camera.rs
src/common/: camera.rs  mod.rs  obj_load.rs
src/pt_renderer/: config.rs  coordinator.rs  mod.rs  render_worker.rs  traced_image.rs  tracers.rs
src/pt_renderer/tracers/: bdpt.rs  debug.rs  path_tracer.rs
src/pt_renderer/tracers/bdpt/: vertex.rs
src/renderer/: gl_renderer.rs  mod.rs  pt_renderer.rs  triangle.rs  vertex.rs
src/scattering/: diffuse.rs  glossy.rs  specular.rs
src/scene/: bvh.rs  material.rs  mesh.rs  mod.rs  obj_load.rs  scene.rs
src/shaders/: image.frag  preview.frag  preview.vert
src/statistics/: accumulator.rs
src/texture/: normal_map.rs
