[package]
edition = '2018'
name = "rusty_the_rendering_engine"
version = "0.1.0"
authors = ["ItsHoff <ItsHoff@users.noreply.github.com>"]

[dependencies]
cgmath = "0.18.0"
chrono = "0.4.19"
glium = "0.30.1"
image = "0.23.14"
lazy_static = "1.4.0"
num_cpus = "1.13.0"
prettytable-rs = "0.8.0"
rand = "0.8.4"

[features]
default = []
single_precision = []

[profile.release]
debug = true
